k8s/apps/portfolio/base/istio-ingressgateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  type: LoadBalancer
  loadBalancerIP: 34.49.35.73
  ports:
  - port: 15021
    targetPort: 15021
    protocol: TCP
    name: status-port
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http2
  - port: 443
    targetPort: 8443
    protocol: TCP
    name: https
  - port: 15443
    targetPort: 15443
    protocol: TCP
    name: tls
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
