k8s/apps/portfolio/base/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: portfolio-gateway
  labels:
    app: portfolio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - portfolio.hugecat.net
        - hugecat.net
        - www.hugecat.net
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: portfolio-tls-cert
      hosts:
        - portfolio.hugecat.net
        - hugecat.net
        - www.hugecat.net
