k8s/apps/portfolio/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/v1beta1.FrontendConfig: portfolio-frontend-config
    kubernetes.io/ingress.global-static-ip-name: portfolio-portfolio-portfolio-ip
    cloud.google.com/backend-config: '{"default": "portfolio-backend-config"}'
spec:
  ingressClassName: gce
  rules:
    - host: portfolio.hugecat.net
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: portfolio
                port:
                  number: 80
    - host: hugecat.net
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: portfolio
                port:
                  number: 80
    - host: www.hugecat.net
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: portfolio
                port:
                  number: 80
