k8s/apps/portfolio/base/auth.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: portfolio-policy
  namespace: prod
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["*"]
      to:
        - operation:
            methods: ["*"]
